# GraphicEditor

GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  appv6_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-8767b4c7baeefcfbd2f5.json  cmakeFiles-v1-87bdc16f70fe5b814b77.json  codemodel-v2-93848616b086b0828ce6.json  directory-.-Debug-641813f4f0c6451a17a3.json  index-2024-01-18T20-50-23-0000.json  target-all_qmllint_module-Debug-e16cfcdbcf20e3976894.json  (+3 more)
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-57e82b7102e724f3e224.json  directory-.-Debug-58786fdb5e0ab3c85801.json  index-2024-01-18T20-50-01-0726.json  target-all_qmllint_json-Debug-46abf76fffcbf8f41aec.json  target-all_qmltyperegistrations-Debug-c783778bdce8bc2c724f.json  target-appv6-Debug-0abdfab20dc53bf76bd6.json  target-appv6_autogen-Debug-3219810da7676b013d8b.json  target-appv6_qmlimportscan-Debug-c59877a4f438a074be6e.json  target-appv6_qmllint_json-Debug-650b22c3e8ca5f099221.json  target-appv6_qmllint_module-Debug-d7205b7ed6a0ac10cac6.json  target-appv6_tooling-Debug-87d46dbfcb18c060e3cd.json
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appv6.cmake
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appv6.cmake
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appv6_raw_qml_0.qrc  qmake_v6.qrc  qrc_appv6_raw_qml_0.cpp  qrc_qmake_v6.cpp
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/qmlcache/: appv6_Canva_qml.cpp  appv6_ColorHistory_qml.cpp  appv6_ColorPickerDialog_qml.cpp  appv6_ColorPicker_qml.cpp  appv6_ColorSlider_qml.cpp  appv6_ColorTool_qml.cpp  appv6_ConeShape_qml.cpp  appv6_CubeShape_qml.cpp  appv6_CustomButton_qml.cpp  appv6_CylinderShape_qml.cpp  appv6_HSVSlider_qml.cpp  appv6_RGBSlider_qml.cpp  appv6_RectangleShape_qml.cpp  appv6_SphereShape_qml.cpp  appv6_main_qml.cpp  appv6_qml_loader_file_list.rsp  appv6_qmlcache_loader.cpp
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appv6_autogen/: deps  mocs_compilation.cpp
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appv6_autogen/EWIEGA46WW/: moc_colorhistorymodel.cpp  moc_colorpicker_p.cpp  moc_colorpickerpreview.cpp  moc_colorpickerpreview.cpp.json  moc_colorsampler_p.cpp  moc_colorsampler_p.cpp.d  moc_colorslider_p.cpp  moc_colorslider_p.cpp.json  moc_colortool_p.cpp.json  moc_colorwheel.cpp.d  moc_colorwheel.cpp.json  moc_textfielddoublevalidator.cpp  moc_textfielddoublevalidator.cpp.json
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/v6/ColorTools/: qmldir
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/meta_types/: appv6_json_file_list.txt  appv6_json_file_list.txt.timestamp
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/v6/: ColorHistory.qml  ColorPicker.qml  ColorSampler.qml  CubeShape.qml  CustomButton.qml  HSVSlider.qml  appv6.qmltypes  appv6_qml_module_dir_map.qrc  main.qml  qmldir
GraphicEditor_App/build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/v6/ColorTools/: ColorPicker.qmltypes  ColorPicker_qml_module_dir_map.qrc  main.qml
GraphicEditor_App/v6/: CMakeLists.txt  CMakeLists.txt.user.530cc03  CMakeLists.txt.user.54e2436  ColorPickerDialog.qml  ColorSlider.qml  ColorTool.qml  ConeShape.qml  CylinderShape.qml  PropertiesWindow.qml  RectangleShape.qml  SphereShape.qml
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-7a245633a2662c7f1c0c.json  codemodel-v2-161d50cf00b08d47a63f.json  directory-.-Debug-34f6206ecb649c3e971b.json  index-2023-11-27T14-52-39-0925.json  target-all_qmllint-Debug-2078197f51ba0ef8f956.json  target-appv6-Debug-93f3c196a00f511ff718.json  target-appv6_autogen-Debug-1683f51f02a03104485a.json  target-appv6_qmllint-Debug-75c27aacba18151614d5.json  target-appv6_qmltyperegistration-Debug-f7a738bd8b02458a9fff.json  target-appv6_tooling-Debug-2bc909325aa1fc733b3d.json
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appv6.cmake  Qt6_QmlPlugins_Imports_appv6.rsp
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appv6_raw_qml_0.qrc  qrc_appv6_raw_qml_0.cpp  qrc_qmake_v6.cpp
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/qmlcache/: appv6_ColorSampler_qml.cpp  appv6_ColorTool_qml.cpp  appv6_CustomButton_qml.cpp  appv6_HSVSlider_qml.cpp  appv6_PropertiesWindow_qml.cpp  appv6_main_qml.cpp  appv6_qml_loader_file_list.rsp  appv6_qmlcache_loader.cpp
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appv6_autogen/: deps
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appv6_autogen/EWIEGA46WW/: moc_colorhistorymodel.cpp.d  moc_colorhistorymodel.cpp.json  moc_colorpicker_p.cpp.d  moc_colorpicker_p.cpp.json  moc_colorpickerpreview.cpp.d  moc_colorsampler_p.cpp.json  moc_colorslider_p.cpp.d  moc_colortool_p.cpp  moc_colortool_p.cpp.d  moc_colorwheel.cpp  moc_textfielddoublevalidator.cpp.d
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/meta_types/: qt6appv6_debug_metatypes.json
build-v6-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/v6/: Canva.qml  ColorTool.qml  CustomButton.qml  HSVSlider.qml  qmldir
v6/: CMakeLists.txt  RGBSlider.qml  main.cpp  main.qml  qtquickcontrols2.conf
